commit on 'main'

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>Annie Easley (1933-2011) was a computer scientist, mathematician and rocket scientist. 
             <br>
             <br>
-            She worked on Centaur technology at NASA -- a high-energy rocket technology that uses liquid hydrogen and liquid oxygen to boost rockets into space. 
+            She worked on Centaur technology at NASA - a high-energy rocket technology that uses liquid hydrogen and liquid oxygen to boost rockets into space. 
             <br>
             <br>
             She also co-authored numerous papers about nuclear engines in rockets and she worked on solar, wind and energy projects.</p>
